Fixed Freezing at Server Startup